# EngageKC

./: .gitignore  .replit  CODE_OF_CONDUCT.md  Procfile  README.md  backup_20241006_124327.db  backup_script.py  celerybeat-schedule.dir  check_characters.py  contributing_characters.md  db copy.sqlite3  db.sqlite3  django_testing_guide.md  generate_inital_data.py  manage.py  migrate_data.py  pyproject.toml  pytest.ini  requirements.txt  wsgi.py
datadeck/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
engagekc/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
media/videos/: captured_video.webm  captured_video.x-matroskacodecsavc1opus  captured_video_Tr4YaJk.webm
staticfiles/video_app/: words.txt
video_app/: admin.py  admin_views.py  apps.py  auth_views.py  decorators.py  forms.py  media_views.py  middleware.py  models.py  observer_views.py  session_views.py  student_management_views.py  tasks.py  tests.py  urls.py  utils.py  views-backup.py  views.py
video_app/fixtures/: initial_data.json
video_app/migrations/: 0001_initial.py  0001_squashed_0012_session_character_set.py  0002_alter_session_created_by.py  0002_class.py  0003_comment_name_comment_password.py  0003_media_class_associated.py  0004_customadmin_media_password.py  0004_post_session_remove_media_class_associated_comment_and_more.py  0005_comment_is_admin_alter_comment_name.py  0005_remove_media_post_associated_and_more.py  0006_alter_media_options_studentmediainteraction.py  0006_alter_media_session_associated.py  0007_remove_comment_password.py  0008_alter_media_session.py  (+38 more)
(+71 files in other folders)
