[tool.poetry]
name = "repl-nix-prep-kc-data-deck"
version = "0.1.0"
description = "Data Deck application for PREP-KC"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
celery = "^5.4.0"
django-widget-tweaks = "^1.5.0"
pillow = "^10.4.0"
reportlab = "^4.2.5"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
factory-boy = "^3.3.1"
pytest-mock = "^3.14.0"
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.6.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "engagekc.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
